--- a/Expected Values.ipynb
+++ b/Expected Values.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Import packages and read datasets\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore')\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -33,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +201,7 @@
        "      5.0       0.66         0.17      2000.0    965.30"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +412,7 @@
        "      5.0       0.57         0.43      2000.0  2929.48    667.25"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
