--- a/Clues Cleaning.ipynb
+++ b/Clues Cleaning.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "### Reading clues.json\n",
     "\n",
-    "In clues.json, every line is a separate game, and the values are stored in lists. This is an advisable way to store the data, but it was the only way I could find to scrape all the clues and their correct responses in one spider. We make this data readable by pandas by converting all the lists to have equal length and then reading every game in separately, and concatenating all games together. In the raw data, the 'game_id' column is a list of length one, so we multiply that by the number of clues in the game. There is also the possibility that there is a tiebreaker question, which results in the 'value' and 'order_number' liss being one less entry shorter, so in those cases we append 'Tiebreaker' to each list. We then create a base dataframe, and use a for loops to concatenate all other games on top of the base."
+    "In clues.json, every line is a separate game, and the values are stored in lists. This is not an advisable way to store the data, but it was the only way I could find to scrape all the clues and their correct responses in one spider. We make this data readable by pandas by converting all the lists to have equal length and then reading every game in separately, and concatenating all games together. In the raw data, the 'game_id' column is a list of length one, so we multiply that by the number of clues in the game. There is also the possibility that there is a tiebreaker question, which results in the 'value' and 'order_number' liss being one less entry shorter, so in those cases we append 'Tiebreaker' to each list. We then create a base dataframe, and use a for loops to concatenate all other games on top of the base."
    ]
   },
   {
